--- a/src/app/ConversationComponents/dialogsList/dialogsList.component.scss
+++ b/src/app/ConversationComponents/dialogsList/dialogsList.component.scss
@@ -2,14 +2,20 @@ body { margin: 0; }
 #sidebar, #content { position: absolute; }
 #sidebar, #content { overflow: auto; padding: 10px; }
 #sidebar {
- width: 10vw;
+  min-width: 220px;
+ max-width: 240px;;
  top: 10vh; /* Расстояние от верхнего края */
  bottom: 0; /* Расстояние снизу  */
  background: #708090;
 }
+
+#sidebar button{
+  margin: 5px;
+}
+
 #content {
  top: 10vh; /* Расстояние от верхнего края */
- left: 10vw; /* Расстояние от левого края */
+ left: 240px; /* Расстояние от левого края */
  bottom: 0; right: 0;
 }
 #CreationDialogForm {
