--- a/src/app/allusers/my-orders/my-orders.component.html
+++ b/src/app/allusers/my-orders/my-orders.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="order-page">
 <div *ngIf="check">
     <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
@@ -28,15 +29,15 @@
         <!-- Symbol Column -->
         <ng-container matColumnDef="status">
             <mat-header-cell *matHeaderCellDef>Стaтус заказа</mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.status}} </mat-cell>
+            <mat-cell  *matCellDef="let element"> {{element.status}} </mat-cell>
         </ng-container>
         
         <ng-container matColumnDef="actions">
           <span>
             
-            <mat-header-cell *matHeaderCellDef>Настройки</mat-header-cell>
+            <mat-header-cell *matHeaderCellDef>Изменить Стaтус</mat-header-cell>
             <mat-cell *matCellDef="let row">
-              <div data-toggle="modal" (click)="edit(row)"data-target="#orderModal" style="font-size:25px; cursor:pointer"><i class="fas fa-wrench"></i></div>
+              <button *ngIf="row.nextStatus!=undefined" (click)="changeOrderStatus(row)" class="btn btn-success">{{row.nextStatus}}</button>
             </mat-cell>
           </span>
         </ng-container>
@@ -48,32 +49,3 @@
   </div>
   </div>
 
-  <div  class="modal fade" id="orderModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">Заказ N {{editOrder.orderId}}</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div *ngIf="!isEdited">
-              <div *ngIf="userId==editOrder.freelancerId" [formGroup]="service.getEditForm()" class="form-group" >
-            <select formControlName="orderStatus" class="custom-select">
-                <option value="ACCEPTED">Принят</option>
-                <option value="INPROGRESS">В процессе</option>
-                <option value="СOMPLETED">Завершен</option>
-            </select>
-              </div>
-              <div *ngIf="isEdited">
-                Данные сохранены !
-              </div>
-          </div>
-        </div>
-        <div  class="modal-footer">
-          <button type="button" (click)="changeOrderStatus()" class="btn btn-primary">Отправить</button>
-        </div>
-      </div>
-    </div>
-  </div>
