--- a/src/app/allusers/notifications/notifications.component.scss
+++ b/src/app/allusers/notifications/notifications.component.scss
@@ -9,9 +9,13 @@
 .notification
 {
 
-    margin-bottom:15px;
-    font-size:20px;
+    margin-bottom:5px;
+    font:15px;
     font-weight:555;
+}
+
+.ft {
+	font-size:15px;
 }
 
 a {
@@ -27,6 +31,9 @@ a {
     width:100%;
 }
 
+.nbut{
+	max-width:30px;
+}
 .b
 {
 
