--- a/src/app/student/add-advertisement/add-advertisement.component.html
+++ b/src/app/student/add-advertisement/add-advertisement.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<form [formGroup]="advService.getAdvForm()" class="signIn">
+<form *ngIf="!sendData" [formGroup]="advService.getAdvForm()" class="signIn">
     <div class="container mt-5 ">
         <div class="row d-flex flex-column justify-content-center  align-items-center">
             <div class="col-md-6 col-sm-12 text-center text-uppercase  signin-label font-weight-bold">Новое Объявление</div>
@@ -70,3 +70,7 @@
         </div>
     </div>
 </form>
+
+<div *ngIf='sendData' class="loading">
+    <mat-spinner></mat-spinner>
+</div>
