--- a/src/app/student/add-advertisement/add-advertisement.component.scss
+++ b/src/app/student/add-advertisement/add-advertisement.component.scss
@@ -14,6 +14,15 @@
 
 }
 
+.loading
+{
+  width:100vw;
+  height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
 .example-2 .btn-tertiary{color:#555;padding:0;line-height:40px;width:300px;margin:auto;display:block;border:2px solid #555}
 .example-2 .btn-tertiary:hover,.example-2 .btn-tertiary:focus{color:#888;border-color:#888}
 .example-2 .input-file{width:.1px;height:.1px;opacity:0;overflow:hidden;position:absolute;z-index:-1}
