--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -19,6 +19,8 @@
             <div class="col-md-4 col-sm-4 d-flex justify-content-center">
                 <button type="button" class="btn btn-success" (click)="onSubmit()">Войти</button>
             </div> 
+            <h3>Using Button</h3>
+	<input type="button" (click)="download()" value="Download Employee Data"/>
         </div>
     </div>
 </form>
