--- a/src/app/userpage2/userpage2.component.scss
+++ b/src/app/userpage2/userpage2.component.scss
@@ -28,6 +28,18 @@
     justify-content:center;
 }
 
+
+.fontFile
+{
+    font-size:44px;
+    cursor:pointer;
+}
+
+.fontFileName
+{
+    font-size:11px;
+    font-weight:555;
+}
   th
 {
     text-align:center;
