fix dialog member adding, add friends notifications, some change in user profile

--- a/src/app/ConversationComponents/messageCard/messageCard.component.html
+++ b/src/app/ConversationComponents/messageCard/messageCard.component.html
@@ -1,5 +1,5 @@
 
-<div *ngIf="true" class="blog-card" [ngStyle]="{'background': background}">
+<div *ngIf="true" class="blog-card" [ngStyle]="{'background': message.isNoRead ? 'LightBlue' : 'white'}">
     <div class="inner-part">
       <label class="img">
         <img  src='https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSaY9UGZkwA_Am-IgAiVJkD0VoluyIJXM8OOi57ioAp5gj5CAkM'/>
