--- a/src/app/ConversationComponents/dialog/dialog.component.html
+++ b/src/app/ConversationComponents/dialog/dialog.component.html
@@ -2,6 +2,7 @@
   <app-navbar></app-navbar>
  <div id="sidebar">
    <p><mark>{{dialog?.name}}</mark></p>
+   <div *ngIf="!userSearchPanelVisible">
    <button mat-raised-button class="ml-2" *ngIf="dialog?.type=='public'" (click)="openUserAddForm()"><i class="fas fa-plus-circle"></i>Добавить пользователя</button>
    <button mat-raised-button class="ml-2" *ngIf="dialog?.type=='public'" (click)="liveDialog()"><i class="fas fa-minus-circle"></i>Покинуть диалог</button>
    <div *ngIf="dialog?.creatorId == user?.userId">
@@ -11,6 +12,29 @@
    <div *ngFor ='let user of dialogMembers'>
      <app-dialog-member-card [(us)]="user"></app-dialog-member-card>
    </div>
+   </div>
+   <div *ngIf="userSearchPanelVisible">
+     <form [formGroup]="dgService.getUserSearchForm()">
+       <h5>Поиск</h5>
+       <label for="">Имя</label>
+       <input type="text" class="form-control" formControlName="firstName" autocomplete="off" placeholder="first name">
+       <div *ngIf="dgService.getUserSearchForm().controls['firstName'].invalid && dgService.getUserSearchForm().controls['firstName'].touched" >
+         <small  *ngIf="dgService.getUserSearchForm().controls['firstName'].errors.minlength">name is too short</small>
+         <small  *ngIf="dgService.getUserSearchForm().controls['firstName'].errors.maxlength">name is too long</small>
+       </div>
+       <label for="">Фамилия</label>
+       <input type="text" class="form-control" formControlName="lastName" autocomplete="off" placeholder="last name">
+       <div *ngIf="dgService.getUserSearchForm().controls['lastName'].invalid && dgService.getUserSearchForm().controls['lastName'].touched" >
+         <small  *ngIf="dgService.getUserSearchForm().controls['lastName'].errors.minlength">name is too short</small>
+         <small  *ngIf="dgService.getUserSearchForm().controls['lastName'].errors.maxlength">name is too long</small>
+       </div>
+     </form>
+     <button mat-raised-button class="ml-2" (click)="search()"><i class="fas fa-search"></i>Поиск</button>
+     <button mat-raised-button class="ml-2" (click)="closeUserAddForm()"><i class="fas fa-minus-circle"></i>Отмена</button>
+   <div *ngFor ='let us of users' align="center">
+     <app-user-card [(us)]="us" *ngIf="user.userId != us.userId" (click)="invite(us)"></app-user-card>
+   </div>
+  </div>
  </div>
  <div id="Sending">
    <form class="mt-5" [formGroup]="dgService.getMessageForm()">
@@ -36,22 +60,5 @@
                 </div>
             </ng-template>
        </ul>
- </div>
- <div class="blog-card" *ngIf="addUserVisible">
-   <div class="inner-part">
-     <form [formGroup]="dgService.getAddUserForm()" class="mt-5">
-       <h1>Add user</h1>
-         <div class="form-group">
-           <label for="">User name</label>
-           <input id="Name" type="text" class="form-control" formControlName="userName" placeholder="Username" autocomplete="off" [(ngModel)]="newUserName">
-           <div *ngIf="dgService.getAddUserForm().controls['userName'].invalid && dgService.getAddUserForm().controls['userName'].touched" >
-             <small class="form-text text-muted" *ngIf="dgService.getAddUserForm().controls['userName'].errors.minlength">name is too short</small>
-             <small  class="form-text text-muted" *ngIf="dgService.getAddUserForm().controls['userName'].errors.maxlength">name is too long</small>
-           </div>
-         </div>
-     </form>
-     <button class="btn btn-light btn-primary-spacing" (click)="invite()">Invite</button>
-     <button class="btn btn-dark btn-primary-spacing" (click)="closeUserAddForm()">Cancel</button>
-   </div>
  </div>
 </body>
