--- a/src/app/ConversationComponents/dialogMemberCard/dialogMemberCard.component.html
+++ b/src/app/ConversationComponents/dialogMemberCard/dialogMemberCard.component.html
@@ -5,7 +5,7 @@
         <img  src='https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSaY9UGZkwA_Am-IgAiVJkD0VoluyIJXM8OOi57ioAp5gj5CAkM'/>
       </label>
       <div class="content ">
-        {{us.name}}
+        {{us.name}} {{us?.lastName}} {{us?.firstName}}
       </div>
     </div>
   </div>
