--- a/src/app/userpage2/userpage2.component.scss
+++ b/src/app/userpage2/userpage2.component.scss
@@ -14,7 +14,81 @@
 }
 
 
-  
+#group-list {
+  display: block;
+  margin: 0;
+  padding: 0;
+  width: 300px;
+  height: 100%;
+  background: #EEE;
+  list-style-type: none;
+}
+
+.group {
+  width: 300px;
+  height: 60px;
+  background: #EEE;
+  border-bottom: 1px solid #DDD;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+
+
+.group img {
+  width: 45px;
+  height: 45px;
+  border-radius: 30px;
+  border: 2px solid #AAA;
+  object-fit: cover;
+  margin-left: 5px;
+  margin-right: 10px;
+}
+
+.group .name {
+  font-size: 18px;
+}
+
+
+
+#friend-list {
+  display: block;
+  margin: 0;
+  padding: 0;
+  width: 300px;
+  height: 100%;
+  background: #EEE;
+  list-style-type: none;
+}
+
+.friend {
+  width: 300px;
+  height: 60px;
+  background: #EEE;
+  border-bottom: 1px solid #DDD;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+
+
+.friend img {
+  width: 45px;
+  height: 45px;
+  border-radius: 30px;
+  border: 2px solid #AAA;
+  object-fit: cover;
+  margin-left: 5px;
+  margin-right: 10px;
+}
+
+.friend .name {
+  font-size: 18px;
+}
+
+
 .order-page
 {
     padding:50px;
@@ -72,7 +146,7 @@ table {
 {
     border:none !important;
 }
-  
+
 .prof
 {
     max-width:100%;
